crates/service/tests/hover/snapshots/features__hover__data_int_idx.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\n(data $d)\n```"
  },
  "range": {
    "start": {
      "line": 4,
      "character": 14
    },
    "end": {
      "line": 4,
      "character": 15
    }
  }
}
