crates/service/tests/hover/snapshots/features__hover__elem_ident_idx.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\n(elem $e)\n```"
  },
  "range": {
    "start": {
      "line": 4,
      "character": 15
    },
    "end": {
      "line": 4,
      "character": 17
    }
  }
}
