crates/service/tests/hover/snapshots/features__hover__field_ident_idx.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\n(field $x (mut i32))\n```"
  },
  "range": {
    "start": {
      "line": 4,
      "character": 17
    },
    "end": {
      "line": 4,
      "character": 19
    }
  }
}
