crates/service/tests/hover/snapshots/features__hover__field_with_mut.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\n(field (mut i32))\n```"
  },
  "range": {
    "start": {
      "line": 2,
      "character": 23
    },
    "end": {
      "line": 2,
      "character": 32
    }
  }
}
